--- a/pages/brasil.html
+++ b/pages/brasil.html
@@ -23,19 +23,14 @@
 
     <main>
         <article class="article">
-            <div class="news-title">
-                <h2>
-                    <strong>'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde</strong>
-                </h2>
-            </div>
-            <div class="author-info-container">
-                <div class="container-info-author">
-                    <p class="author-info">
-                        Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br>
-                        25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23
-                    </p>
-                </div>
-            </div>
+            <news-header 
+                title="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
+                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23">
+            </news-header>
+        </article>
+
+
+        <article class="article">
             <div class="content-of-the-subject">
                 <div class="container-div">
                     <div class="image-container">
@@ -276,43 +271,20 @@
                 </div>
             </div>
         </article>
+        <most-read
+            data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
+            data-alt1="Imagem ilustrativa da matéria 1"
+            data-imgSrc1="/Assets/imgs/num1.png"
 
-        <article class="article-final"> 
-            <di class="div-container-maislidas">
-                <div class="text-mais-lidas">
-                    <h3><strong>MAIS LIDAS</strong></h3>
-                </div>
-                <div class="numbers-mais-lidas">
-                    <div class="container-number">
-                        <div class="number">
-                            <img src="/Assets/imgs/num1.png" alt="Imagem ilustrativa da matéria" class="article-image">
-                        </div>
-                        <p>
-                            'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça
-                            das
-                            queimadas na saúde
-                        </p>
-                    </div>
-                    <div class="container-number">
-                        <div class="number">
-                            <figure>
-                                <img src="/Assets/imgs/num2.png" alt="Imagem ilustrativa da matéria" class="article-image">
-                            </figure>
-                        </div>
-                        <p>Britânico é o primeiro a tomar nova vacina contra câncer no pulmão</p>
-                    </div>
-                    <div class="container-number">
-                        <div class="number">
-                            <figure>
-                                <img src="/Assets/imgs/num3.png" alt="Imagem ilustrativa da matéria"
-                                    class="article-image">
-                            </figure>
-                        </div>
-                        <p>4 incógnitas em torno do naufrágio do iate de luxo na Itália</p>
-                    </div>
-                </div>
-            </di>
-        </article>
+            data-text2="Britânico é o primeiro a tomar nova vacina contra câncer no pulmão"
+            data-alt2="Imagem ilustrativa da matéria 2"
+            data-imgSrc2="/Assets/imgs/num2.png"
+
+            data-text3="4 incógnitas em torno do naufrágio do iate de luxo na Itália"
+            data-alt3="Imagem ilustrativa da matéria 3"
+            data-imgSrc3="/Assets/imgs/num3.png">
+        </most-read>
+
     </main>
     <footer-tag></footer-tag>
 
@@ -320,5 +292,7 @@
     <script src="/Assets/javascript/components/header/headerTag.js"></script>
     <script src="/Assets/javascript/components/footer/footerTag.js"></script>
     <script src="/Assets/javascript/components/navbar/navbarTag.js"></script>
+    <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
+    <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
 </body>
 </html>
