--- a/pages/internacional.html
+++ b/pages/internacional.html
@@ -21,13 +21,34 @@
     ></navbar-tag>
 
     <main>
-        
+        <article class="article">
+            <news-header 
+                title="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
+                authorInfo="Por Bianca Dahmer, César Willemberg e Mayara Meotti da ByteNews, em Ijuí <br> 25/08/2024 às 16:00 | Atualizado 25/08/2024 às 16:23">
+            </news-header>
+        </article>
+
+        <most-read
+            data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
+            data-alt1="Imagem ilustrativa da matéria 1"
+            data-imgSrc1="/Assets/imgs/num1.png"
+
+            data-text2="Britânico é o primeiro a tomar nova vacina contra câncer no pulmão"
+            data-alt2="Imagem ilustrativa da matéria 2"
+            data-imgSrc2="/Assets/imgs/num2.png"
+
+            data-text3="4 incógnitas em torno do naufrágio do iate de luxo na Itália"
+            data-alt3="Imagem ilustrativa da matéria 3"
+            data-imgSrc3="/Assets/imgs/num3.png">
+        </most-read>
     </main>
-    <footer-tag></footer-tag>>
+    <footer-tag></footer-tag>
 
     <script src="/Assets/javascript/index.js"></script>
     <script src="/Assets/javascript/components/header/headerTag.js"></script>
     <script src="/Assets/javascript/components/footer/footerTag.js"></script>
     <script src="/Assets/javascript/components/navbar/navbarTag.js"></script>
+    <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
+    <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
 </body>
 </html>
