--- a/pages/economia.html
+++ b/pages/economia.html
@@ -16,9 +16,16 @@
         data-item5="Saúde" data-link5="/pages/saude.html"
         data-item6="Ciência" data-link6="/pages/ciencia.html"
         data-item7="Economia" data-link7="/pages/economia.html"
-        data-item8="Cadastrar E-mail" data-link8="/cadastrar-email" data-hidden8="true"
-        data-item9="Pesquisar" data-link9="/pesquisar" data-hidden9="true"
+        data-item8="Cadastrar E-mail" data-link8="/cadastrar-email" data-hidden8="true" data-id8="modal-cadastar-email-hamburguer"
+        data-item9="Pesquisar" data-link9="/pesquisar" data-hidden9="true" data-id9="search"
     ></navbar-tag>
+
+    <modal-component 
+        id="modal-cadastar-email" 
+        title="ByteNews.com" 
+        heading="Registrar-se para receber notificações" 
+        iconSrc="/Assets/imgs/user.png"
+    ></modal-component>
 
     <main>
         <article class="article">
@@ -50,5 +57,6 @@
     <script src="/Assets/javascript/components/navbar/navbarTag.js"></script>
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
+    <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
 </body>
 </html>
