--- a/pages/tecnologia.html
+++ b/pages/tecnologia.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="/Assets/styles/css/style.css">
 </head>
 <body>
-    <div class="header-container"></div>
-    <div class="navbar-container"></div>
+    <header-tag></header-tag>
+    <navbar-tag
+        data-item1="Home" data-link1="/index.html"
+        data-item2="Brasil" data-link2="/pages/brasil.html"
+        data-item3="Internacional" data-link3="/pages/internacional.html"
+        data-item4="Tecnologia" data-link4="/pages/tecnologia.html"
+        data-item5="Saúde" data-link5="/pages/saude.html"
+        data-item6="Ciência" data-link6="/pages/ciencia.html"
+        data-item7="Economia" data-link7="/pages/economia.html"
+        data-item8="Cadastrar E-mail" data-link8="/cadastrar-email" data-hidden8="true" data-id8="modal-cadastar-email-hamburguer"
+        data-item9="Pesquisar" data-link9="/pesquisar" data-hidden9="true" data-id9="search"
+    ></navbar-tag>
+
+    <modal-component 
+        id="modal-cadastar-email" 
+        title="ByteNews.com" 
+        heading="Registrar-se para receber notificações" 
+        iconSrc="/Assets/imgs/user.png"
+    ></modal-component>
 
     <main>
         <article class="article">
@@ -32,10 +49,14 @@
             data-imgSrc3="/Assets/imgs/num3.png">
         </most-read>
     </main>
-    <div class="footer-container-2"></div>
+    <footer-tag></footer-tag>
 
     <script src="/Assets/javascript/index.js"></script>
+    <script src="/Assets/javascript/components/header/headerTag.js"></script>
+    <script src="/Assets/javascript/components/footer/footerTag.js"></script>
+    <script src="/Assets/javascript/components/navbar/navbarTag.js"></script>
     <script src="/Assets/javascript/components/mostRead/mostReadTag.js"></script>
     <script src="/Assets/javascript/components/newsHeader/newsHeader.js"></script>
+    <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
 </body>
 </html>
