Add input search component; implement styles and integrate with existing structure

--- a/index.html
+++ b/index.html
@@ -104,5 +104,7 @@
     <script src="/Assets/javascript/components/newsCategory/newsCategory.js"></script>
     <script src = '/Assets/javascript/components/modalComponentSearch/ComponentSearch.js'></script>
     <script src = '/Assets/javascript/components/modalComponetCadastrar/modalComponentCadastrar.js'></script>
+    <script src="/Assets//javascript/components/resultSearch/resultSearch.js"></script>
+    <script src="/Assets/javascript/components/InputSearch/InputSearch.js"></script>
 </body>
 </html>
