Enhance Most Read component to include clickable links for articles; update styles for links in the component

--- a/pages/brasil.html
+++ b/pages/brasil.html
@@ -288,15 +288,18 @@
             data-text1="'O fogo parece estar dentro de casa, é difícil respirar': o impacto da fumaça das queimadas na saúde"
             data-alt1="Imagem ilustrativa da matéria 1"
             data-imgSrc1="/Assets/imgs/num1.png"
+            data-link1="/pages/brasil.html"
 
             data-text2="Britânico é o primeiro a tomar nova vacina contra câncer no pulmão"
             data-alt2="Imagem ilustrativa da matéria 2"
             data-imgSrc2="/Assets/imgs/num2.png"
+            data-link2="/pages/saude.html"
 
             data-text3="4 incógnitas em torno do naufrágio do iate de luxo na Itália"
             data-alt3="Imagem ilustrativa da matéria 3"
-            data-imgSrc3="/Assets/imgs/num3.png">
-        </most-read>
+            data-imgSrc3="/Assets/imgs/num3.png"
+            data-link3="/pages/internacional.html"
+        ></most-read>
 
     </main>
     <footer-tag></footer-tag>
