Refactor footer.css and newsCard.css styles

--- a/pages/brasil.html
+++ b/pages/brasil.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/Assets/styles/css/style.css">
 </head>
 <body>
-    <header-tag></header-tag>
+    <header-tag
+        data-title="ByteNews.com"
+        data-link="/index.html"
+    ></header-tag>
     <navbar-tag
         data-item1="Home" data-link1="/index.html"
         data-item2="Brasil" data-link2="/pages/brasil.html"
@@ -65,7 +68,7 @@
                     </div>
                 </div>
                 <div class="text-container-body">
-                    <div>
+                    <div class="text-container-2">
                         <p>
                             O Instituto Nacional de Pesquisas Espacias (Inpe) informa que o Brasil registrou 4.928 focos de
                             calor.
@@ -209,18 +212,18 @@
                         </div>
                     </div>
                     <div class="container-div-list" style="margin-top: 2%;">
-                        <div class="image-container">
+                        <div class="image-container-dois">
                             <img src="/Assets/imgs/h7.png" alt="Imagem ilustrativa da matéria">
                             <p class="caption">Um homem observa um incêndio em uma plantação de cana-de-açúcar perto da cidade de
                                 Dumont.</p>
                         </div>
                         <div class="text-container">
                             <h3><strong>Recomendações para a saúde</strong></h3>
-                            <p style="margin-top: 2%;">
+                            <p style="margin: 2% 0;">
                                 Autoridades de São Paulo oferece recomendações de saúde e segurança (veja abaixo) que valem
                                 para todas as localidades do país em caso de contato com fumaça de incêndios:
                             </p>
-                            <ul style="margin-top: 5%; margin-left: 3%;">
+                            <ul>
                                 <li>Pacientes com asma, DPOC (doença pulmonar obstrutiva crônica) e rinite alérgica devem
                                     manter o
                                     tratamento regular com sua medicação inalatória (bombinhas);</li>
