--- a/pages/saude.html
+++ b/pages/saude.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/Assets/styles/css/style.css">
 </head>
 <body>
-    <header-tag></header-tag>
+    <header-tag
+        data-title="ByteNews.com"
+        data-link="/index.html"
+    ></header-tag>
     <navbar-tag
         data-item1="Home" data-link1="/index.html"
         data-item2="Brasil" data-link2="/pages/brasil.html"
